<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDocenteActivity">

    <TextView
        android:id="@+id/lblTitleAddDocente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/lbl_title_agregar_nuevo_docente"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/lyNombreDocente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTitleAddDocente">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/lbl_nombre_docente" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombreDocente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="0.5"
            android:hint="@string/lbl_nombre_docente" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyApellidoDocente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyNombreDocente">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/lbl_apellido_docente" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtApellidoDocente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="0.5"
            android:hint="@string/lbl_apellido_docente" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyTipoDocente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyApellidoDocente">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/lbl_tipo_docente" />

        <Spinner
            android:id="@+id/spnTipoDocente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyTipoDocente">

        <Button
            android:id="@+id/btnAddDocente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/confirm"
            android:text="@string/btn_guardar_add_docente" />


        <Button
            android:id="@+id/btnCancelDocente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/cancel"
            android:text="@string/btn_cancelar_add_docente" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>